Fixed LinearDebiasing with correct x-axis alignment, classification still iffy

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,3 +118,7 @@ svg {
     color: #717171;
     font-weight: 450;
 }
+
+.dropdown-item {
+    cursor: pointer;
+}
